Fix global game container layout overflow and scrolling constraints

--- a/www/css/games.css
+++ b/www/css/games.css
@@ -11,6 +11,7 @@
   justify-content: flex-start;
   align-items: center;
   padding-top: 88px;
+  overflow: hidden;
   /* position: absolute; width/height come from .screen – do NOT override here */
 }
 
@@ -34,6 +35,9 @@
 
 #game-stage {
   flex-grow: 1;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
   width: 94%;
   max-width: 1000px;
   margin-bottom: 14px;
@@ -186,6 +190,7 @@
 #memory-container {
   width: 100%;
   height: 100%;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -709,6 +714,7 @@
 .cmx-wrapper {
   width: 100%;
   height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -2323,6 +2329,7 @@
 #vehicle-parking-container {
   width: 100%;
   height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
